--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2>Tipos de datos</h2>
     </a>
 
-    <p>En Javascript los tipos de datos se clasifican en 2, primitivos y objetoss.</p>
+    <p>En Javascript los tipos de datos se clasifican en 2, primitivos y objetos.</p>
 
     <h3>Primitivos</h3>
     <ul>
