--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <li><strong>RegExp: </strong>es una expresión regular que es una secuencia de caracteres que forma un patrón de búsqueda.</li>
         <li><strong>Error: </strong>son objetos que javaScript crea cuando ocurre alguno y tiene dos propiedades, nombre y mensaje.</li>
         <li><strong>Array: </strong>un array o matriz es un dato especial que puede contener más de un valor, se declara con los [] y tienen índices numéricos y secuenciales que empiezan en 0.</li>
-        <li><strong>Object: </strong>un objeto puede contener varios valores y se diferencia de los arrays porque contienen pares de clave y valor (key - value), esto quiere decir que el índice puede ser una cadena de texto, se declara con {}</li>
+        <li><strong>Object: </strong>un objeto puede contener varios valores y se diferencia de los arrays porque contienen pares de llave y valor (key - value), esto quiere decir que el índice puede ser una cadena de texto, se declara con {}</li>
     </ul>
     <h4>Function</h4>
     <ul>
